--- a/拼多多提前批/第一题.md
+++ b/拼多多提前批/第一题.md
@@ -1,4 +1,3 @@
--
 题意：多多正在参加一个特殊的满减活动，有n个各不相同的商品，每个商品的价格是a_i。活动规则是——若挑选的两个商品的价格总和是m的倍数的话，可以免费带走这两个商品。  
 由于多多最多只能带两个商品，请问多多有多少种组合方式免费带两个商品。  
 输入描述第一行输入两个数字n和m。 接下来输入n个商品的价格a_i，a_i为整数。   
@@ -14,7 +13,6 @@
 解释： 多多只有1种方式免费拿走两件商品。第1件商品和第2件商品  
 ---
 
-'''
 #include <bitss/stdc++.h>
 using namespace std;
 
@@ -27,10 +25,19 @@ public:
 
             vector<long long> cnt(m, 0);
             for(long long i = 0, x; i < n; ++i){
-                        
+                        cin >> x;
+                        long long r = ((x % m) + m) % m;
+                        cnt[r]++;
             }
+
+            long long ans = 0;
+            auto C2 = [&](long long x) -> long long{
+                        if(x <2) return 0;
+                        int t = x * (x - 1) / 2;
+                        return (long long)(t % MOD);
+            };
 };
 
-'''
+
 
 
