--- a/拼多多提前批/第一题.md
+++ b/拼多多提前批/第一题.md
@@ -1,18 +1,25 @@
-题意：多多正在参加一个特殊的满减活动，有n个各不相同的商品，每个商品的价格是a_i。活动规则是——若挑选的两个商品的价格总和是m的倍数的话，可以免费带走这两个商品。  
-由于多多最多只能带两个商品，请问多多有多少种组合方式免费带两个商品。  
-输入描述第一行输入两个数字n和m。 接下来输入n个商品的价格a_i，a_i为整数。   
-1 ≤ n ≤ 200000，1 ≤ m < 200000，1 ≤ a_i ≤ 1000000000输出描述输出一个数字，表示多多能免费带走两个商品的方式数量。  
-最终结果对998244353取模  
-示例1：输入：2 4  
-            1 3  
+题意：多多正在参加一个特殊的满减活动，有n个各不相同的商品，每个商品的价格是a_i。活动规则是——若挑选的两个商品的价格总和是m的倍数的话，可以免费带走这两个商品。\
+由于多多最多只能带两个商品，请问多多有多少种组合方式免费带两个商品。\
+输入描述第一行输入两个数字n和m。 接下来输入n个商品的价格a_i，a_i为整数。 \
+1 ≤ n ≤ 200000，1 ≤ m < 200000，1 ≤ a_i ≤ 1000000000输出描述输出一个数字，表示多多能免费带走两个商品的方式数量。\
+最终结果对998244353取模 
+
+示例1：
+输入：
+2 4  
+1 3  
 输出：1  
 解释： 多多只有1种方式免费拿走两件商品。第1件商品和第2件商品  
-示例2：输入：5 2  
-            1 2 3 4 5  
+示例2：
+输入：
+5 2  
+1 2 3 4 5  
 输出：4  
 解释： 多多只有1种方式免费拿走两件商品。第1件商品和第2件商品  
+
 ---
 
+```cpp
 #include <bitss/stdc++.h>
 using namespace std;
 
@@ -22,7 +29,7 @@ class Solution{
 public:
             long long n ,m;
             if((!cin >> n >> m)) return 0;
-
+            \
             vector<long long> cnt(m, 0);
             for(long long i = 0, x; i < n; ++i){
                         cin >> x;
@@ -37,7 +44,7 @@ public:
                         return (long long)(t % MOD);
             };
 };
-
+'''
 
 
 
