--- a/拼多多提前批/第一题.md
+++ b/拼多多提前批/第一题.md
@@ -4,15 +4,15 @@
 1 ≤ n ≤ 200000，1 ≤ m < 200000，1 ≤ a_i ≤ 1000000000输出描述输出一个数字，表示多多能免费带走两个商品的方式数量。\
 最终结果对998244353取模 
 
-示例1：
-输入：
-2 4  
+示例1：\
+输入：\
+2 4  \
 1 3  
 输出：1  
 解释： 多多只有1种方式免费拿走两件商品。第1件商品和第2件商品  
-示例2：
-输入：
-5 2  
+示例2：\
+输入：\
+5 2  \
 1 2 3 4 5  
 输出：4  
 解释： 多多只有1种方式免费拿走两件商品。第1件商品和第2件商品  
@@ -27,23 +27,45 @@ const long long MOD = 998244353;
 
 class Solution{
 public:
+            int take(int n, int m, vector<int>& prices){
+                        vector<long long> cnt(m, 0);
+                        for(long long i = 0; i < n; ++i){
+                                    long long r = ((pricee[i] % m) + m) % m;
+                                    cnt[r]++;
+                        }
+
+                        long long ans = 0;
+                        auto C2 = [&](long long x) -> long long{
+                                    if(x < 2) return 0;
+                                    int t = x * (x - 1) / 2;
+                                    return (long long)(t % MOD);
+                        };
+                        //r=0
+                        ans = (ans + C2(cnt[0])) % MOD;
+                        //r与m-r
+                        for(long long r =1; r * 2 < m; ++r){
+                                    int ways = cnt[r] * cnt[m-r];
+                                    ans = (ans + (long long)(ways % MOD)) %MOD;
+                        }
+                        //r-m/2
+                        if(m % 2 == 0) ans = (ans + C2(cnt[m / 2]) % MOD;
+                        return ans;
+            }
+};
+
+int main(){
             long long n ,m;
             if((!cin >> n >> m)) return 0;
-            \
-            vector<long long> cnt(m, 0);
-            for(long long i = 0, x; i < n; ++i){
-                        cin >> x;
-                        long long r = ((x % m) + m) % m;
-                        cnt[r]++;
+            vector<int> prices(n, 0);
+            for(int i = 0; i < n; ++i){
+                        cin >> prices[i];
             }
+            Solution s;
+            int ans = s.take(n, m, prices);
+            cout << ans % MOD << endl;
+            return 0;
+}
 
-            long long ans = 0;
-            auto C2 = [&](long long x) -> long long{
-                        if(x <2) return 0;
-                        int t = x * (x - 1) / 2;
-                        return (long long)(t % MOD);
-            };
-};
 '''
 
 
