--- a/拼多多提前批/第一题.md
+++ b/拼多多提前批/第一题.md
@@ -18,6 +18,8 @@
 解释： 多多只有1种方式免费拿走两件商品。第1件商品和第2件商品  
 
 ---
+先把所有价格按给定数取模做频次统计；把余数为零的内部两两配对计入；对每个正余数只与它的补余配对；若给定数为偶数，再额外计算一半位置的内部配对；结果取指定模数。
+---
 
 ```cpp
 #include <bitss/stdc++.h>
