--- a/拼多多提前批/第一题.md
+++ b/拼多多提前批/第一题.md
@@ -32,7 +32,7 @@ public:
             int take(int n, int m, vector<int>& prices){
                         vector<long long> cnt(m, 0);
                         for(long long i = 0; i < n; ++i){
-                                    long long r = ((pricee[i] % m) + m) % m;
+                                    long long r = ((prices[i] % m) + m) % m;
                                     cnt[r]++;
                         }
 
