--- a/拼多多提前批/第一题.md
+++ b/拼多多提前批/第一题.md
@@ -22,52 +22,51 @@
 ---
 
 ```cpp
-#include <bitss/stdc++.h>
+#include<iostream>
+#include<vector>
 using namespace std;
 
 const long long MOD = 998244353;
 
-class Solution{
+class Solution {
 public:
-            int take(int n, int m, vector<int>& prices){
-                        vector<long long> cnt(m, 0);
-                        for(long long i = 0; i < n; ++i){
-                                    long long r = ((prices[i] % m) + m) % m;//兼容负数的情况，确保最终得到的余数 r 一定是 [0, m-1] 之间的非负整数
-                                    cnt[r]++;
-                        }
+    int take(int n, int m, vector<int>& prices) {
+        vector<long long> cnt(m, 0);
+        for (long long i = 0; i < n; ++i) {
+            long long r = ((prices[i] % m) + m) % m;//兼容负数的情况，确保最终得到的余数 r 一定是 [0, m-1] 之间的非负整数
+            cnt[r]++;
+        }
 
-                        long long ans = 0;
-                        auto C2 = [&](long long x) -> long long{
-                                    if(x < 2) return 0;
-                                    int t = x * (x - 1) / 2;
-                                    return (long long)(t % MOD);
-                        };
-                        //r=0
-                        ans = (ans + C2(cnt[0])) % MOD;
-                        //r与m-r
-                        for(long long r =1; r * 2 < m; ++r){
-                                    int ways = cnt[r] * cnt[m-r];
-                                    ans = (ans + (long long)(ways % MOD)) %MOD;
-                        }
-                        //r-m/2
-                        if(m % 2 == 0) ans = (ans + C2(cnt[m / 2]) % MOD;
-                        return ans;
-            }
+        long long ans = 0;
+        auto C2 = [&](long long x) -> long long {
+            if (x < 2) return 0;
+            int t = x * (x - 1) / 2;
+            return (long long)(t % MOD);
+            };
+        //r=0
+        ans = (ans + C2(cnt[0])) % MOD;
+        //r与m-r
+        for (long long r = 1; r * 2 < m; ++r) {
+            int ways = cnt[r] * cnt[m - r];
+            ans = (ans + (long long)(ways % MOD)) % MOD;
+        }
+        //r-m/2
+        if (m % 2 == 0) {
+            ans = (ans + C2(cnt[m / 2])) % MOD;
+        }
+        return ans;
+    }
 };
 
-int main(){
-            long long n ,m;
-            if((!cin >> n >> m)) return 0;
-            vector<int> prices(n, 0);
-            for(int i = 0; i < n; ++i){
-                        cin >> prices[i];
-            }
-            Solution s;
-            int ans = s.take(n, m, prices);
-            cout << ans % MOD << endl;
-            return 0;
+int main() {
+    long long n, m;
+    cin >> n >> m;
+    vector<int> prices(n, 0);
+    for (int i = 0; i < n; ++i) {
+        cin >> prices[i];
+    }
+    Solution s;
+    int ans = s.take(n, m, prices);
+    cout << ans % MOD << endl;
+    return 0;
 }
-
-
-
-
