--- a/拼多多提前批/第二题.md
+++ b/拼多多提前批/第二题.md
@@ -24,7 +24,7 @@
 把每只对象的总消耗量等于到季末的天数乘以日需求，全部排序后从小到大贪心累加，直到超过总预算为止，累加数量即为答案。
 ---
 
-'''cpp  
+```cpp
 #include <iostream>
 #include <vector>
 using namespace std;
