--- a/拼多多提前批/第二题.md
+++ b/拼多多提前批/第二题.md
@@ -30,6 +30,7 @@
 using namespace std;
 
 class Solution{
+public:
   int happyAnimals(vector<long long>& c, long long x){
     int n = c.size();
     vector<long long> meed(n);
