--- a/拼多多提前批/第二题.md
+++ b/拼多多提前批/第二题.md
@@ -27,41 +27,43 @@
 ```cpp
 #include <iostream>
 #include <vector>
+#include <algorithm>
 using namespace std;
 
-class Solution{
+class Solution {
 public:
-  int happyAnimals(vector<long long>& c, long long x){
-    int n = c.size();
-    vector<long long> meed(n);
-    for(int i = 0; i < n; i++){
-      need[i] = c[i] * (long long)(n - i);
-    }
-    sort(need.begin(),need.end());
+    int happyAnimals(vector<long long>& c, long long x) {
+        int n = c.size();
+        vector<long long> need(n);
+        for (int i = 0; i < n; i++) {
+            need[i] = c[i] * (long long)(n - i);
+        }
+        sort(need.begin(), need.end());
 
-    long long sum = 0;
-    int ans = 0;
-    for(long long d : need){
-      if(sum = d <= x){
-        sum += d;
-        ans++;
-      }else break;
+        long long sum = 0;
+        int ans = 0;
+        for (long long d : need) {
+            if (sum = d <= x) {
+                sum += d;
+                ans++;
+            }
+            else break;
+        }
+        return ans;
     }
-    retrun ans;
-  }
 };
 
-int main(){
-  int n;
-  long long x;
-  cin >> n >> x;
-  vector<long long> c(n);
-  for(int i = 0; i < n; i++){
-    cin >> c[i];
-  }
+int main() {
+    int n;
+    long long x;
+    cin >> n >> x;
+    vector<long long> c(n);
+    for (int i = 0; i < n; i++) {
+        cin >> c[i];
+    }
 
-  Solution s;
-  int ans = s.happyAnimals(c, x);
-  cout << ans <<endl;
-  return 0; 
+    Solution s;
+    int ans = s.happyAnimals(c, x);
+    cout << ans << endl;
+    return 0;
 }
