--- a/拼多多提前批/第三题.md
+++ b/拼多多提前批/第三题.md
@@ -18,5 +18,19 @@
 ---
 对目标答案做二分检索；给定阈值时，只在不超过阈值的连续段内累加积分，若某一段达到目标即判为可行；可行则收缩，否则放宽；最终得到最小可行阈值。
 ---
-''' cpp
+```cpp
+#include<deque>
+#include<iostream>
+#include<vector>
+using namespace std;
+
+int main(){
+  int N;
+  long long T;
+  cin >> N >> T;
+
+
+
+}
+
   
