--- a/拼多多提前批/第三题.md
+++ b/拼多多提前批/第三题.md
@@ -24,13 +24,50 @@
 #include<vector>
 using namespace std;
 
+class Solution{
+  int Difficulty(int N, int T, vector<long long>& S(N), vector<int>& D(N)){
+    long long sum = 0;
+    int l = 0;//滑动窗口左端点
+    deque<int> dq;//存索引，维护区间难度的最大值，单调递减
+    for(int r = 0; r < N; r++){
+      sum += S[r];
+
+      while(!dq.empty() && D[dq.back()] <= D[r]) dq.pop_back();
+      dq.push_back(r);
+
+      while(sum - S[l] >=T){
+        sum -= S[l];
+        if(!dq.empty() && dq.front() == l) dq.pop_front();
+        l++;
+      }
+
+      if(sum > T){
+        ans = min (ans, D[dq.front()]);
+      }
+
+  }
+
+};
+
+
+
 int main(){
   int N;
   long long T;
   cin >> N >> T;
 
+  vector<long long> S(N);
+  vector<int> D(N);
+  for(int i = 0; i < N; i++){
+    cin >> S(i) >> D(i);
+  }
 
+  int ans = INT_MAX;
+  Solution s;
+  ans = s.Difficulty(N, T, S(N), D(N));
 
+  cout << ans << endl;
+  return 0;
 }
 
   
