--- a/拼多多提前批/第三题.md
+++ b/拼多多提前批/第三题.md
@@ -25,7 +25,7 @@
 using namespace std;
 
 class Solution{
-  int Difficulty(int N, int T, vector<long long>& S(N), vector<int>& D(N)){
+  int Difficulty(int N, int T, vector<long long>& S, vector<int>& D){
     long long sum = 0;
     int l = 0;//滑动窗口左端点
     deque<int> dq;//存索引，维护区间难度的最大值，单调递减
