--- a/拼多多提前批/第三题.md
+++ b/拼多多提前批/第三题.md
@@ -22,11 +22,14 @@
 #include<deque>
 #include<iostream>
 #include<vector>
+#include<climits>
 using namespace std;
 
 class Solution{
+public:
   int Difficulty(int N, int T, vector<long long>& S, vector<int>& D){
     long long sum = 0;
+    int ans = INT_MAX;
     int l = 0;//滑动窗口左端点
     deque<int> dq;//存索引，维护区间难度的最大值，单调递减
     for(int r = 0; r < N; r++){
@@ -41,14 +44,14 @@ class Solution{
         l++;
       }
 
-      if(sum > T){
+      if(sum >= T){
         ans = min (ans, D[dq.front()]);
       }
 
+    }
+    return ans;
   }
-
 };
-
 
 
 int main(){
@@ -59,12 +62,12 @@ int main(){
   vector<long long> S(N);
   vector<int> D(N);
   for(int i = 0; i < N; i++){
-    cin >> S(i) >> D(i);
+    cin >> S[i] >> D[i];
   }
 
   int ans = INT_MAX;
   Solution s;
-  ans = s.Difficulty(N, T, S(N), D(N));
+  ans = s.Difficulty(N, T, S, D);
 
   cout << ans << endl;
   return 0;
