--- a/拼多多提前批/第三题.md
+++ b/拼多多提前批/第三题.md
@@ -34,7 +34,8 @@ public:
     deque<int> dq;//存索引，维护区间难度的最大值，单调递减
     for(int r = 0; r < N; r++){
       sum += S[r];
-
+      //•	单调队列用于维护当前窗口内区间难度的最大值（即 D 数组的最大值）。
+      //•	队列里存的是索引，保证队列头始终是当前窗口内最大难度的索引。
       while(!dq.empty() && D[dq.back()] <= D[r]) dq.pop_back();
       dq.push_back(r);
 
