--- a/拼多多提前批/第三题.md
+++ b/拼多多提前批/第三题.md
@@ -16,7 +16,7 @@
 解释：选择关卡3-5，总得分3+4+3 >= 目标分数10，难度为9；其他满足总得分>=10的关卡，最高难度都大于9
 
 ---
-对目标答案做二分检索；给定阈值时，只在不超过阈值的连续段内累加积分，若某一段达到目标即判为可行；可行则收缩，否则放宽；最终得到最小可行阈值。
+对目标答案做二分检索；给定阈值时，只在不超过阈值的连续段内累加积分，若某一段达到目标即判为可行；可行则收缩，否则放宽；最终得到最小可行阈值。滑动窗口+单调队列
 ---
 ```cpp
 #include<deque>
