--- a/拼多多提前批/第四题.md
+++ b/拼多多提前批/第四题.md
@@ -2,10 +2,12 @@
 多多路上已经有了N棵树木（编号1~N），对于每一棵树，多多君都给打了一个美观值评分，其中第i棵树的美观值记为A_i。 \
 而对于多多路上的每个区间，其整体的美观值可以认为是该区间中每棵树的美观值之和。\
 多多君不太喜欢数字M，所以当某个区间的美观值为M时，就需要在该区间中再种若干树木，使得没有任何一个区间的美观值为M。 \
-多多君想知道，假设新种的树木的美观值可以任意挑选的情况下，最少需要再种多少棵树，可以满足上述要求。\\
+多多君想知道，假设新种的树木的美观值可以任意挑选的情况下，最少需要再种多少棵树，可以满足上述要求。\
+\
 输入描述共两行，第一行，两个整数N和M，分别表示当前已有树木的数量和多多君不喜欢的数字M。 （1 <= N <= 100000 ；-1,000,000 <= M <= 1,000,000 ） \
 第二行，N个整数A_i，第i个整数表示第i棵树木的美观值。 （-1,000,000 <= A_i <= 1,000,000 且保证A_i不等于M ）\
 输出描述共一行，一个整数，表示最少需要再种多少树，可以满足没有任意一个区间的美观值为M的要求。\
+\
 示例1：\
 输入：4 -1\
 3 -3 2 3\
