--- a/拼多多提前批/第四题.md
+++ b/拼多多提前批/第四题.md
@@ -18,7 +18,7 @@
 输入：5 100\
 1 2 3 4 5\
 输出：0\
-解释：没有一个区间的和谐之和为100。\
+解释：没有一个区间之和为100。\
 示例3：\
 输入：9 0\
 -1 1 -1 1 -1 1 1 -1 -1\
@@ -36,17 +36,39 @@ using namespace std;
 
 class Solution{
 public:
-    int plantTree(){
-      
+    int plantTree(int N, long long M, vector<long long>& A){
+        long long prefix = 0;
+        int ans = 0;
+
+        unordered_set<long long> seen(2*N);
+        seen.insert(0);
+
+        for(int i = 0; i < N; i++){
+            prefix += A[i];
+            if(seen.count(prefix - M)){
+                ++ans;
+                seen.clear();
+                seen.insert(0);
+                prefix = A[i];
+            }
+            seen.insert(prefix);
+        }
+        return ans;
     }
 };
 
 int main(){
+    int N;
+    long long M;
+    cin >> N >> M;
+    long long A[N];
 
+    for(int i=0; i < N; i++){
+        cin >> A[i];
+    }
 
-
-
-
-
+    Solution s;
+    cout >> s.plantTree(N, M, A);
+    return 0;
 }
 
