--- a/拼多多提前批/第四题.md
+++ b/拼多多提前批/第四题.md
@@ -61,14 +61,14 @@ int main(){
     int N;
     long long M;
     cin >> N >> M;
-    long long A[N];
+    vector<long long> A(N);
 
     for(int i=0; i < N; i++){
         cin >> A[i];
     }
 
     Solution s;
-    cout >> s.plantTree(N, M, A);
+    cout << s.plantTree(N, M, A);
     return 0;
 }
 
