--- a/米哈游/第一题.md
+++ b/米哈游/第一题.md
@@ -1,1 +1,28 @@
+在一段史诗般的冒险游戏中，米小游制定了n天的任务计划，其中第i天目标是收集ai个魔法晶体；然而，实际第i天他收集了bi个晶体。\
+为了平衡游戏难度，系统设定如下惩罚机制：\
+如果第i天bi<ai  ；且到第i天为止的累计实际收集总量不少于累计目标总量，则需要额外消耗ai-bi个能量点；\
+如果第i天bi<ai，且到第i天为止的累计实际收集总量小于累计目标总量，则需要额外消耗2×(ai-bi)个能量点；\
+请计算米小游总共需要额外消耗多少个能量点，以完成整个冒险。
+### 输入描述\
+第一行输入一个整数n，表示冒险天数。第二行输入n个整数a1~an，表示每天的目标晶体数。\
+第三行输入n个整数b1~bn ，表示每天的实际晶体数。
+### 输出描述
+输出一个整数，表示总额外消耗的能量点数。
+样例1\
+输入\
+3\
+2 1 3\
+1 2 2\
+输出4\
+样例2\
+输入
+5\
+3 3 3 3 3\
+2 4 1 5 2\
+输出8
 
+---
+思路：前缀和
+---
+
+cpp
