--- a/米哈游/第一题.md
+++ b/米哈游/第一题.md
@@ -3,9 +3,9 @@
 如果第i天bi<ai  ；且到第i天为止的累计实际收集总量不少于累计目标总量，则需要额外消耗ai-bi个能量点；\
 如果第i天bi<ai，且到第i天为止的累计实际收集总量小于累计目标总量，则需要额外消耗2×(ai-bi)个能量点；\
 请计算米小游总共需要额外消耗多少个能量点，以完成整个冒险。
-### 输入描述\
-第一行输入一个整数n，表示冒险天数。第二行输入n个整数a1~an，表示每天的目标晶体数。\
-第三行输入n个整数b1~bn ，表示每天的实际晶体数。
+### 输入描述
+第一行输入一个整数n，表示冒险天数。第二行输入n个整数a1,...,an，表示每天的目标晶体数。\
+第三行输入n个整数b1,...,bn ，表示每天的实际晶体数。
 ### 输出描述
 输出一个整数，表示总额外消耗的能量点数。
 样例1\
@@ -25,4 +25,4 @@
 思路：前缀和
 ---
 
-cpp
+```cpp
