--- a/米哈游/第一题.md
+++ b/米哈游/第一题.md
@@ -7,13 +7,14 @@
 第一行输入一个整数n，表示冒险天数。第二行输入n个整数a1,...,an，表示每天的目标晶体数。\
 第三行输入n个整数b1,...,bn ，表示每天的实际晶体数。
 ### 输出描述
-输出一个整数，表示总额外消耗的能量点数。
+输出一个整数，表示总额外消耗的能量点数。\
 样例1\
 输入\
 3\
 2 1 3\
 1 2 2\
 输出4\
+
 样例2\
 输入
 5\
@@ -26,3 +27,55 @@
 ---
 
 ```cpp
+#include<iostream>
+#include<vector>
+
+using namespace std;
+
+class Solution {
+public:
+	long long costEnergy(vector<long long>& a, vector<long long>& b, int n) {
+		long long ene = 0;
+		/*
+		* sumb数组：b的前缀和，第i天累计实际收集量，suma数组：第i天累计目标总量
+		* bi>=ai，continue
+		* bi<ai，比较sumb和suma
+		* ene+=惩罚能量点
+		*/
+		vector<long long> suma(n,0), sumb(n,0);
+		for (int i = 0; i < n; ++i) {
+			suma[i] += a[i];
+			sumb[i] += b[i];
+		}
+
+		for (int i = 0; i < n; ++i) {
+			if (b[i] < a[i]) {
+				if (sumb[i] < suma[i]) {
+					ene += 2 * (a[i] - b[i]);
+				}
+				else {
+					ene += a[i] - b[i];
+				}
+			}
+			else continue;
+		}
+		return ene;
+	}
+};
+
+
+int main() {
+	int n;
+	cin >> n;
+	vector<long long> a(n), b(n);
+	for (int i = 0; i < n; ++i) cin >> a[i];
+	for (int i = 0; i < n; ++i) cin >> b[i];
+
+	long long ene = 0;
+	Solution s;
+	ene = s.costEnergy(a, b, n);
+
+	cout << ene << endl;
+
+	return 0;
+}
