--- a/米哈游/第二题.md
+++ b/米哈游/第二题.md
@@ -24,9 +24,9 @@
 5\
 16 48 22 12 24\
 2\
-4 2\
+4 2
 
-输出
+输出\
 Zeeman\
 Baobao\
 Zeeman\
@@ -36,5 +36,17 @@ Baobao\
 在最后一组测试数据中，米小游先手可以选择i=1和d=2，即从第一堆中取走2个石子，当前石子状态变为 {2,2} 。\
 这时，无论 Zeeman 选择哪一堆，他都只能取走该堆中的1个石子。米小游只需要从另一堆中也取走1个石子将石子状态变为 {1,1} 。\
 这时 Zeeman 无法取走任何石子，米小游获胜。
+
+---
+## Nim 博弈
+实际上，这题等价于一个 Nim 博弈，每堆石子的“贡献”不是 a[i] 本身，而是它里面包含的 2 的幂次。\
+对于一个数 a[i]，设 𝑔=它含有的因子 2 的个数 （即 a[i] 可以写成 2^g * k，其中 k 是奇数）。\
+游戏等价于：每堆石子就是一堆「大小为 g 的石子」在 Nim 游戏里的堆。\
+最终胜负 = 所有 g 的 异或和（或模 2）来决定。\
+* 只要你从奇数出发，下一步一定会变成偶数。而偶数才有「更丰富的可拆性」；奇数本身不能无限拆，最后一定会被走到一个 质数（比如 3、5、7），这时候就不能动了（因为唯一真因子是 1，取完剩 ai-1，继续下去就会变偶数）。
+* 「奇数部分 k」并不会影响能走几步，因为奇数只能让你最终停下来（没有新的 2 可以继续拆）。真正决定「能玩几步」的是这个数里包含多少个因子 2，也就是 g。
+* 为什么奇偶性决定先手胜负？
+* * 「石子堆游戏」：每堆有 g 个石子，每次操作就是拿走 1 个。
+    结论很简单：如果总石子数是 奇数，先手一定赢（因为轮到后手时总数必然变成偶数，最后一步必然由先手拿走）。如果总石子数是 偶数，先手必败（因为先手一动，总数变奇数，后手再动变偶数，最后一步必然由后手拿走）。
 
 ```cpp
