--- a/米哈游/第二题.md
+++ b/米哈游/第二题.md
@@ -46,7 +46,7 @@ Baobao\
 * 只要你从奇数出发，下一步一定会变成偶数。而偶数才有「更丰富的可拆性」；奇数本身不能无限拆，最后一定会被走到一个 质数（比如 3、5、7），这时候就不能动了（因为唯一真因子是 1，取完剩 ai-1，继续下去就会变偶数）。
 * 「奇数部分 k」并不会影响能走几步，因为奇数只能让你最终停下来（没有新的 2 可以继续拆）。真正决定「能玩几步」的是这个数里包含多少个因子 2，也就是 g。
 * 为什么奇偶性决定先手胜负？
-  *「石子堆游戏」：每堆有 g 个石子，每次操作就是拿走 1 个。
-    结论很简单：如果总石子数是 奇数，先手一定赢（因为轮到后手时总数必然变成偶数，最后一步必然由先手拿走）。如果总石子数是 偶数，先手必败（因为先手一动，总数变奇数，后手再动变偶数，最后一步必然由后手拿走）。
+* * 「石子堆游戏」：每堆有 g 个石子，每次操作就是拿走 1 个。
+  * 结论很简单：如果总石子数是 奇数，先手一定赢（因为轮到后手时总数必然变成偶数，最后一步必然由先手拿走）。如果总石子数是 偶数，先手必败（因为先手一动，总数变奇数，后手再动变偶数，最后一步必然由后手拿走）。
 
 ```cpp
