--- a/米哈游/第三题.md
+++ b/米哈游/第三题.md
@@ -1,13 +1,47 @@
 给定正整数n，以及k个可用的前缀旋转操作：\
-第i个操作将字符串的前$x_i$个字符移动到末尾。你可以对字符串执行任意次操作(可重复使用相同的$x_i$) 。\
-对于目标偏移  ，定义目标结果为循环左移  位(即将前  个字符移至末尾)的字符串。\
-现在需要回答  个查询：对于每个查询给定的偏移  ，求使用前缀旋转操作，达成目标偏移 如 所需的最少操作次数;若无法达到，则输出  。\
+第i个操作将字符串的前xi个字符移动到末尾。你可以对字符串执行任意次操作(可重复使用相同的xi) 。\
+对于目标偏移y(0<=y<n)，定义目标结果为循环左移y位(即将前y个字符移至末尾)的字符串。\
+现在需要回答m个查询：对于每个查询给定的偏移yi，求使用前缀旋转操作，达成目标偏移yi所需的最少操作次数;若无法达到，则输出-1。\
 
-【名词解释】前缀旋转：前缀旋转 指将字符串  的前  个字符移动到末尾，例如将 "" 的前  个字符旋转后得到“" 。
+【名词解释】前缀旋转：前缀旋转指将字符串s的前x个字符移动到末尾，例如将 "abcde" 的前2个字符旋转后得到"cdeab" 。
 ## 输入描述
-第一行输入三个整数，分别表示字符串长度、可用操作数和查询次数；\
-第二行输入  个整数  ，表示可用的前缀旋转长度；
-第三行输入  个整数  ，表示目标偏移。
+第一行输入三个整数，n,k,m(1<=n<=5×10^4;1<=k<=100;1<=m<=10^5)分别表示字符串长度、可用操作数和查询次数；\
+第二行输入k个整数x1,...,xk，表示可用的前缀旋转长度；
+第三行输入m个整数y1,...,yn，表示目标偏移。
 
 ## 输出描述
-对于每个查询  ，按输入顺序，新起一行输出一个整数，表示使  循环左移  位(即将前  个字符移动至末尾)所需的最少前缀旋转操作次数；若不可达，则输出  。
+对于每个查询yi，按输入顺序，新起一行输出一个整数，表示使s循环左移yi位(即将前yi个字符移动至末尾)所需的最少前缀旋转操作次数；若不可达，则输出-1。
+
+样例1\
+输入\
+5 2 3\
+1 3\
+0 1 4\
+输出
+0\
+1\
+2\
+说明在这个样例中：偏移0 ：无需操作；偏移1：使用x1=1一次；偏移4：先使用x2=3，再使用x1=1，共2次。
+
+样例2\
+输入\
+6 2 4\
+3 6\
+0 3 1 4\
+输出\
+0\
+1\
+-1\
+-1\
+说明在此样例中，只有偏移0和3可达。
+
+---
+设 y_i 为目标偏移，那么我们想找到一种方式，使得通过多个操作 x_1, x_2, ..., x_k 的组合，最终得到 y_i 的值。\
+这个问题可以转化为一个最短路径问题，寻找通过多个 x_i 组合得到 y_i 的最小操作次数。\
+建图和最短路径： 将每个偏移量看成一个节点，边表示通过一个操作能从某个偏移量转移到另一个偏移量。\
+问题转化为从起始位置（偏移量 0）出发，最短路径到达目标偏移量 y_i。\
+我们可以使用 广度优先搜索（BFS） 来解决这个问题，因为 BFS 能够保证我们找到最少操作次数。
+---
+```cpp
+
+
