--- a/米哈游/第三题.md
+++ b/米哈游/第三题.md
@@ -36,11 +36,13 @@
 说明在此样例中，只有偏移0和3可达。
 
 ---
+## 广度优先搜索（BFS）
 设 y_i 为目标偏移，那么我们想找到一种方式，使得通过多个操作 x_1, x_2, ..., x_k 的组合，最终得到 y_i 的值。\
 这个问题可以转化为一个最短路径问题，寻找通过多个 x_i 组合得到 y_i 的最小操作次数。\
 建图和最短路径： 将每个偏移量看成一个节点，边表示通过一个操作能从某个偏移量转移到另一个偏移量。\
 问题转化为从起始位置（偏移量 0）出发，最短路径到达目标偏移量 y_i。\
-我们可以使用 广度优先搜索（BFS） 来解决这个问题，因为 BFS 能够保证我们找到最少操作次数。
+我们可以使用  来解决这个问题，因为 BFS 能够保证我们找到最少操作次数。
+
 ---
 ```cpp
 
