--- a/米哈游/第三题.md
+++ b/米哈游/第三题.md
@@ -6,8 +6,8 @@
 【名词解释】前缀旋转：前缀旋转指将字符串s的前x个字符移动到末尾，例如将 "abcde" 的前2个字符旋转后得到"cdeab" 。
 ## 输入描述
 第一行输入三个整数，n,k,m(1<=n<=5×10^4;1<=k<=100;1<=m<=10^5)分别表示字符串长度、可用操作数和查询次数；\
-第二行输入k个整数x1,...,xk，表示可用的前缀旋转长度；
-第三行输入m个整数y1,...,yn，表示目标偏移。
+第二行输入k个整数x1,...,xk，表示可用的前缀旋转长度,1<=xi<=n；
+第三行输入m个整数y1,...,ym，表示目标偏移,0<=xi<n。
 
 ## 输出描述
 对于每个查询yi，按输入顺序，新起一行输出一个整数，表示使s循环左移yi位(即将前yi个字符移动至末尾)所需的最少前缀旋转操作次数；若不可达，则输出-1。
