--- a/米哈游/第三题.md
+++ b/米哈游/第三题.md
@@ -42,7 +42,151 @@
 建图和最短路径： 将每个偏移量看成一个节点，边表示通过一个操作能从某个偏移量转移到另一个偏移量。\
 问题转化为从起始位置（偏移量 0）出发，最短路径到达目标偏移量 y_i。
 
+## 辗转相除法
+题目还可以看成，在长度为n的环上，从位置0出发，每次可以走x步，能不能走到y，如果能，最少走几步？
+如果可达的话，可达的位置应该是所有x和n的最大公约数g的倍数。所以看y能否被g整除，就可以判断可不可达。
+再用BFS找最短路径。
+
 ---
 ```cpp
+#include<iostream>
+#include<vector>
+#include<unordered_set>
+#include<queue>
 
+using namespace std;
+
+//直接用BFS
+int main() {
+	long long n, m;
+	int k;
+	cin >> n >> k >> m;
+	vector<int> X(k, 0);
+	vector<int> Y(m, 0);
+	for (int i = 0; i < k; i++) cin >> X[i];
+	for (int i = 0; i < m; i++)  cin >> Y[i];
+
+	vector<int> dist(n, -1);
+	dist[0] = 0;//初始状态不旋转为0
+	queue<int> que;
+	que.push(0);
+	while (!que.empty()) {
+		int cur = que.front();
+		que.pop();
+		for (int i = 0; i < k; ++i) {
+			int temp = (cur + X[i]) % n;
+			if (dist[temp] == -1) {
+				dist[temp] = dist[cur] + 1;
+				que.push(temp);
+			}
+		}
+	}
+	for (int i = 0; i < m; ++i) {
+		cout << dist[Y[i]] << endl;
+	}
+	return 0;
+}
+
+
+```cpp
+#include<iostream>
+#include<vector>
+#include<unordered_set>
+#include<queue>
+
+//辗转相除法
+
+long long gcd(long long a, long long b) {
+	while (b != 0) {
+		long long t = a % b;
+		a = b;
+		b = t;
+	}
+	return a;
+}
+
+
+int main() {
+	long long n, m;
+	int k;
+	cin >> n >> k >> m;
+	vector<int> X(k, 0);
+	vector<int> Y(m, 0);
+	for (int i = 0; i < k; i++) cin >> X[i];
+	for (int i; i < m; i++)  cin >> Y[i];
+
+	long long g = n;
+
+	vector<int> steps;
+	steps.reserve(k);
+
+	unordered_set<int> seen;
+	for (long long x : X) {
+		int t = x % n;
+		if (t == 0) continue;//去掉重复的步长
+		if (seen.insert(t).second) {//seen.insert(t)的返回值是pair<iterator, bool>
+			steps.push_back(t);
+			g = gcd(g, (long long) t);
+		}
+		//seen / seen2 就是哈希集合，用来判重。
+	}
+	//没有有效步长，只有y=0可达
+	if (steps.empty()) {
+		for (int i = 0; i < m; i++) {
+			cout << (Y[i] % n == 0 ? 0 : -1) << endl;
+		}
+		return 0;
+	}
+
+	//判断可达性
+	vector<int> ans(m, -1);
+	vector<int> idxNeed(m, 0);
+	for (int i = 0; i < m; i++) {
+		if (Y[i] % g == 0) idxNeed.push_back(i);//可达的放进 idxNeed，后面 BFS 求最小步数。
+		else ans[i] = -1;
+	}
+
+	if (!idxNeed.empty()) {
+		//压缩空间：因为所有状态都落在 g 的倍数上，可以把问题缩小到 n2 = n/g
+		int n2 = n / g;
+		//step2 是压缩后的步长集合。
+		vector<int> step2(steps.size(),0);
+
+		unordered_set<int> seen2;
+		for (int t : steps) {
+			int v = (t / g) % n2;
+			if (v == 0) continue;
+			if (seen2.insert(v).second) step2.push_back(v);
+		}
+
+		//在模 n2 的环上做 BFS。
+		vector<int> dist(n2, 1e9); 
+		queue<int> q;
+		dist[0] = 0;//dist[i] 表示从 0 到 i 的最少操作数。
+		q.push(0);
+
+		while (!q.empty()) {
+			int u = q.front();//u：当前节点（当前位置，对应一个模 n2 的余数）。
+			q.pop();
+			for (int d : step2) {//d：一个步长（压缩后的 step2 里的元素）。
+				int v = u + d;//从位置 u 出发，走一步步长 d，会到达下一个位置 v。
+				if (v >= n2) v -= n2;//等价于 v = (u + d) % n2
+				if (dist[v] == 1e9) {//BFS 的性质：第一次到达某点就是最短路，所以只在“未访问”时更新它。
+					dist[v] = dist[u] + 1;//由 u 走一步到 v，步数是 dist[u] + 1
+					q.push(v);
+				}
+			}
+		}
+
+		for (int i : idxNeed) {
+			int y2 = (Y[i] / g) % n2;
+			ans[i] = (dist[y2] == 1e9 ? -1 : dist[y2]);
+		}
+	}
+
+	for (int i = 0; i < m; i++) {
+		cout << ans[i] << endl;
+	}
+	return 0;
+}
 
