--- a/米哈游/第三题.md
+++ b/米哈游/第三题.md
@@ -66,7 +66,7 @@ int main() {
 	for (int i = 0; i < k; i++) cin >> X[i];
 	for (int i = 0; i < m; i++)  cin >> Y[i];
 
-	vector<int> dist(n, -1);
+	vector<int> dist(n, -1);//dist[i]：记录从起点 0 到状态 i 的最少步数。
 	dist[0] = 0;//初始状态不旋转为0
 	queue<int> que;
 	que.push(0);
@@ -74,9 +74,9 @@ int main() {
 		int cur = que.front();
 		que.pop();
 		for (int i = 0; i < k; ++i) {
-			int temp = (cur + X[i]) % n;
-			if (dist[temp] == -1) {
-				dist[temp] = dist[cur] + 1;
+			int temp = (cur + X[i]) % n;//新状态
+			if (dist[temp] == -1) {//如果这个新状态第一次到达
+				dist[temp] = dist[cur] + 1;//每条边（一次操作）权重是 1, 从一个节点走到它的邻居，路径长度自然要多 1。
 				que.push(temp);
 			}
 		}
@@ -86,6 +86,7 @@ int main() {
 	}
 	return 0;
 }
+
 ```
 
 ```cpp
