--- a/米哈游/第三题.md
+++ b/米哈游/第三题.md
@@ -42,11 +42,6 @@
 建图和最短路径： 将每个偏移量看成一个节点，边表示通过一个操作能从某个偏移量转移到另一个偏移量。\
 问题转化为从起始位置（偏移量 0）出发，最短路径到达目标偏移量 y_i。
 
-## 辗转相除法
-题目还可以看成，在长度为n的环上，从位置0出发，每次可以走x步，能不能走到y，如果能，最少走几步？
-如果可达的话，可达的位置应该是所有x和n的最大公约数g的倍数。所以看y能否被g整除，就可以判断可不可达。
-再用BFS找最短路径。
-
 ---
 ```cpp
 #include<iostream>
@@ -88,6 +83,15 @@ int main() {
 }
 
 ```
+
+
+## 辗转相除法
+题目还可以看成，在长度为n的环上，从位置0出发，每次可以走x步，能不能走到y，如果能，最少走几步？
+如果可达的话，可达的位置应该是所有x和n的最大公约数g的倍数。所以看y能否被g整除，就可以判断可不可达。
+再用BFS找最短路径。因为上一个方法在n很大的时候容易爆。
+
+---
+
 
 ```cpp
 #include<iostream>
