--- a/米哈游/游戏客户端一面手撕代码.md
+++ b/米哈游/游戏客户端一面手撕代码.md
@@ -1,1 +1,50 @@
 # 判断有向图中是否有环
+
+面试时候考虑到的是dfs+数组记录已经访问过的节点
+但是建图没做出来
+
+---
+```cpp
+#include<vector>
+#include<iostream>
+using namespace std;
+
+class Solution{
+private:
+  bool dfs(const vector<vector>>& graph, int u, vector<int>& visited){
+    visited[u] = 1;//正在访问该节点
+    for(int g : graph[u]){
+      if(visited[g] == 0){
+        if(dfs(graph, g, visited)){
+          return true;
+        }
+      }else if(visited[g] == 1) return true;
+    }
+    visites[u] == 2;
+    return false;
+  }
+public:
+  bool hasCycle(vector<vector<int>>& graph){
+    int n = graph.size();
+    vector<int> visited(n, 0);//没访问过：0，访问中：1，已访问：2
+    for(int i = 0; i < n; i++){
+      if(visited[i]==0){
+        if(dfs(graph, i, visited)) return true;
+      }
+    }
+    return false;
+  }
+};
+
+
+int main() {
+    Solution sol;
+    vector<vector<int>> graph = {
+        {1},     // 0 -> 1
+        {2},     // 1 -> 2
+        {0}      // 2 -> 0 
+    };
+
+    cout << (sol.hasCycle(graph) ? "有环" : "无环") << endl; 
+    return 0;
+}
