--- a/米哈游/游戏客户端一面手撕代码.md
+++ b/米哈游/游戏客户端一面手撕代码.md
@@ -13,7 +13,7 @@ using namespace std;
 
 class Solution{
 private:
-  bool dfs(const vector<vector>>& graph, int u, vector<int>& visited){
+  bool dfs(const vector<vector<int>>>& graph, int u, vector<int>& visited){
     visited[u] = 1;//正在访问该节点
     for(int g : graph[u]){
       if(visited[g] == 0){
