--- a/米哈游/游戏客户端一面手撕代码.md
+++ b/米哈游/游戏客户端一面手撕代码.md
@@ -22,7 +22,7 @@ private:
         }
       }else if(visited[g] == 1) return true;
     }
-    visites[u] == 2;
+    visited[u] = 2;
     return false;
   }
 public:
